cabal-version:      3.0
name:               jrpc-th
version:            0.1.0.0
license:            MIT
author:             Yan Shkurinsky
maintainer:         yan.shkurinsky@gmail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  JRPC.TH
    other-modules:  JRPC.TH.Internal
    build-depends:    base, template-haskell, jrpc-types, aeson, text
    hs-source-dirs:   src
    default-language: Haskell2010
